working base of javafx